Images added to work pages - now for the copy

--- a/src/cgm.html
+++ b/src/cgm.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>ackee creative | freelancer Winchester</title>
+    <title>ackee creative | CGM</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -37,69 +37,69 @@
                 <img src="../img/menu-icon.svg" alt="menu icon (hamburger style)" style="width: 2em;">
             </div>
         </nav>
-        <div class="hero" style="background-image: url(../img/uwork-candid-man-hero.jpg);">
-            <h1 class="visuallyhidden">Candid teenager sitting on a wall smiling</h1>
-            <h1 class="text-center white-text intro">uWork</h1>
-            <h3 class="text-center white-text sub-intro">Design | Branding | UX</h3>
+        <div class="hero" style="background-image: url(../img/cgm-work-hero.jpg);">
+            <h1 class="visuallyhidden">Hero image of houses</h1>
+            <h1 class="text-center white-text intro">CGM</h1>
+            <h3 class="text-center white-text sub-intro">Web Design | Branding</h3>
         </div>
     </section>
 
     <section>
         <div class="central-text-intro container">
             <div class="twelve columns">
-                <h3>ackee is the portfolio of Ed Stennett</h3>
+                <h3>intro</h3>
                 <p>ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
                 <hr class="divider">
             </div>
         </div>
     </section>
 
-    <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
-        <h1 class="visuallyhidden">uWork hero</h1>
+    <section class="portfolio-image-block" style="background-image: url(../img/cgm-logo.jpg);">
+        <h1 class="visuallyhidden">CGM logo</h1>
     </section>
 
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3>about</h3>
+                <h3>brand</h3>
                 <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
 
-    <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
-        <h1 class="visuallyhidden">uWork hero</h1>
+    <section class="portfolio-image-block" style="background-image: url(../img/cgm-bg-1.jpg);">
+        <h1 class="visuallyhidden">CGM brand guidelines open booklet one</h1>
     </section>
 
     <section>
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
-                <h3>skills</h3>
+                <h3>site design</h3>
                 <p>Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
             </div>
         </div>
     </section>
 
-    <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
-        <h1 class="visuallyhidden">uWork hero</h1>
+    <section class="portfolio-image-block" style="background-image: url(../img/cgm-bg-2.jpg);">
+        <h1 class="visuallyhidden">CGM brand guidelines open booklet two</h1>
     </section>
 
 
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3>about</h3>
+                <h3>build</h3>
                 <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
     
-        <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
-        <h1 class="visuallyhidden">uWork hero</h1>
+        <section class="portfolio-image-block" style="background-image: url(../img/cgm-ipad-angle.jpg);">
+        <h1 class="visuallyhidden">CGM website on an iPad</h1>
     </section>
     
-        <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
-        <h1 class="visuallyhidden">uWork hero</h1>
+            <section class="portfolio-image-block" style="background-image: url(../img/cgm-ipad-hero.jpg);">
+        <h1 class="visuallyhidden">CGM website on an iPad</h1>
     </section>
 
     <section class="contact-form">
