--- a/src/uwork.html
+++ b/src/uwork.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>ackee creative | freelancer Winchester</title>
+    <title>ackee creative | uWork</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -47,7 +47,7 @@
     <section>
         <div class="central-text-intro container">
             <div class="twelve columns">
-                <h3>ackee is the portfolio of Ed Stennett</h3>
+                <h3>intro</h3>
                 <p>ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
                 <hr class="divider">
             </div>
@@ -61,26 +61,26 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3>about</h3>
+                <h3>design</h3>
                 <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
 
-    <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
+    <section class="portfolio-image-block" style="background-image: url(../img/uwork-bg.jpg);">
         <h1 class="visuallyhidden">uWork hero</h1>
     </section>
 
     <section>
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
-                <h3>skills</h3>
+                <h3>identity</h3>
                 <p>Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
             </div>
         </div>
     </section>
 
-    <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
+    <section class="portfolio-image-block" style="background-image: url(../img/uwork-logo-construction.jpg);">
         <h1 class="visuallyhidden">uWork hero</h1>
     </section>
 
@@ -88,17 +88,17 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3>about</h3>
+                <h3>ui</h3>
                 <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
     
-        <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
+        <section class="portfolio-image-block" style="background-image: url(../img/uwork-ui.jpg);">
         <h1 class="visuallyhidden">uWork hero</h1>
     </section>
     
-        <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
+        <section class="portfolio-image-block" style="background-image: url(../img/uWork-imac.jpg);">
         <h1 class="visuallyhidden">uWork hero</h1>
     </section>
 
