Hero header updated, parallax added, temp particles.js fix removed

--- a/src/jamesfalconer.html
+++ b/src/jamesfalconer.html
@@ -46,10 +46,10 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="about.html"><u>About</u></a>
+                    <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="work.html">Work</a>
+                    <a href="work.html"><u>Work</u></a>
                 </li>
             </ul>
             <div class="menu-handle navbar-logo">
@@ -60,6 +60,19 @@
             <h1 class="visuallyhidden">hero image of lightbulb</h1>
             <h1 class="text-center white-text intro">James Falconer</h1>
             <h3 class="text-center white-text sub-intro">Web Design</h3>
+        </div>
+    </section>
+    
+        <section class="portfolio-intro">
+        <div class="container portfolio-block-height">
+            <div class="five columns offset-by-one left-text-intro">
+                <h3>project link</h3>
+                <a href="uwork.co.uk"><u>jamesfalconer.me</u></a>
+            </div>
+            <div class="five columns right-text-intro">
+                <h3 class="">skills</h3>
+                <p>XD, Photoshop, Illustrator, HTML, CSS, Javascript</p>
+            </div>
         </div>
     </section>
 
@@ -116,6 +129,14 @@
         <section class="portfolio-image-block" style="background-image: url(../img/jf-imac.jpg);">
         <h1 class="visuallyhidden">uWork hero</h1>
     </section>
+    
+        <section class="portfolio-intro">
+        <div class="container portfolio-block-height-small">
+            <div class="five columns offset-by-one left-text-intro">
+                <a href="work.html"><u>&larr; back to portfolio</u></a>
+            </div>
+        </div>
+    </section>
 
     <section class="contact-form">
         <div class="twelve columns contact-hero ">
@@ -160,8 +181,6 @@
         </div>
 
     </section>
-
-    <div class="hidden" id="particles-js"></div>
 
     <footer class="global-footer">
         <div class="container">
