--- a/src/work.html
+++ b/src/work.html
@@ -90,36 +90,36 @@
     <section>
         <div class="container">
             <div class="six-no-padding columns image-blur">
-            <a href="uwork.html">
+            <figure><a href="uwork.html">
                 <span class="caption"> <h3>uWork</h3>
                     <hr class="hr-full-width">
                     <p>Design   |   Branding   |   UX   |   UI</p></span>
                 <img src="img/uwork-hero.png" class="img-responsive" alt="uwork logo on green background">
-            </a>
+            </a></figure>
         </div>
         <div class="six-no-padding columns image-blur">
-            <a href="ackee.html">
+            <figure><a href="ackee.html">
                 <span class="caption"> <h3>ackee</h3>
                     <hr class="hr-full-width">
                     <p>Web Design   |   Branding</p></span>
                 <img src="img/ackee-hero.jpg" class="img-responsive" alt="ackee logo on dark background">
-            </a>
+            </a></figure>
         </div>
         <div class="six-no-padding columns image-blur">
-            <a href="jamesfalconer.html">
+            <figure><a href="jamesfalconer.html">
                 <span class="caption"> <h3>James Falconer</h3>
                     <hr class="hr-full-width">
                     <p>Web Design</p></span>
                 <img src="img/jf-hero.jpg" class="img-responsive" alt="dark image from James Falconer's site with a lightbulb">
-            </a>
+            </a></figure>
         </div>
         <div class="six-no-padding columns image-blur">
-            <a href="cgm.html">
+            <figure><a href="cgm.html">
                 <span class="caption"> <h3>CGM</h3>
                     <hr class="hr-full-width">
                     <p> Web Design   |   Branding</p></span>
                 <img src="img/cgm-ipad.jpg" class="img-responsive" alt="ipad being used showing cgm site">
-            </a>
+            </a></figure>
         </div>
             <svg width="100%" height="10px" xmlns="http://www.w3.org/2000/svg">
             <filter id="blur1">
@@ -175,7 +175,6 @@
 
     </section>
 
-    <div class="hidden" id="particles-js"></div>
     
     <footer class="global-footer">
         <div class="container">
@@ -220,6 +219,7 @@
             $('nav ul').toggleClass('menu-visible');
         });
     </script>
+    
 </body>
 
 </html>
