--- a/src/cgm.html
+++ b/src/cgm.html
@@ -11,26 +11,26 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link href="http://allfont.net/allfont.css?fonts=league-spartan" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Biryani" rel="stylesheet">
-        <link rel="shortcut icon" href="/favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
-	<link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
-	<link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
-	<link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-	<link rel="apple-touch-icon" href="/favicon-57.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/favicon-114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/favicon-72.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/favicon-144.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/favicon-60.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/favicon-120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
-	<meta name="msapplication-TileColor" content="#FFFFFF">
-	<meta name="msapplication-TileImage" content="/favicon-144.png">
-	<meta name="msapplication-config" content="/browserconfig.xml">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="apple-touch-icon" href="/favicon-57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon-114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon-72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon-144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon-60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileImage" content="/favicon-144.png">
+    <meta name="msapplication-config" content="/browserconfig.xml">
 
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -46,10 +46,10 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="about.html"><u>About</u></a>
+                    <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="work.html">Work</a>
+                    <a href="work.html"><u>Work</u></a>
                 </li>
             </ul>
             <div class="menu-handle navbar-logo">
@@ -60,6 +60,19 @@
             <h1 class="visuallyhidden">Hero image of houses</h1>
             <h1 class="text-center white-text intro">CGM</h1>
             <h3 class="text-center white-text sub-intro">Web Design | Branding</h3>
+        </div>
+    </section>
+
+    <section class="portfolio-intro">
+        <div class="container portfolio-block-height">
+            <div class="five columns offset-by-one left-text-intro">
+                <h3>project link</h3>
+                <a href="uwork.co.uk"><u>cgm.co.uk</u></a>
+            </div>
+            <div class="five columns right-text-intro">
+                <h3 class="">skills</h3>
+                <p>XD, Photoshop, Illustrator, InDesign, HTML, CSS, Javascript</p>
+            </div>
         </div>
     </section>
 
@@ -112,13 +125,21 @@
             </div>
         </div>
     </section>
-    
-        <section class="portfolio-image-block" style="background-image: url(../img/cgm-ipad-angle.jpg);">
+
+    <section class="portfolio-image-block" style="background-image: url(../img/cgm-ipad-angle.jpg); background-position: 50% 100%;">
+        <h1 class="visuallyhidden">CGM website on an iPad</h1>
+    </section>
+
+    <section class="portfolio-image-block" style="background-image: url(../img/cgm-ipad-hero.jpg);">
         <h1 class="visuallyhidden">CGM website on an iPad</h1>
     </section>
     
-            <section class="portfolio-image-block" style="background-image: url(../img/cgm-ipad-hero.jpg);">
-        <h1 class="visuallyhidden">CGM website on an iPad</h1>
+    <section class="portfolio-intro">
+        <div class="container portfolio-block-height-small">
+            <div class="five columns offset-by-one left-text-intro">
+                <a href="work.html"><u>&larr; back to portfolio</u></a>
+            </div>
+        </div>
     </section>
 
     <section class="contact-form">
@@ -164,8 +185,6 @@
         </div>
 
     </section>
-
-    <div class="hidden" id="particles-js"></div>
 
     <footer class="global-footer">
         <div class="container">
