--- a/src/index.html
+++ b/src/index.html
@@ -12,25 +12,25 @@
     <link href="http://allfont.net/allfont.css?fonts=league-spartan" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Biryani" rel="stylesheet">
     <link rel="shortcut icon" href="/favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
-	<link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
-	<link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
-	<link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-	<link rel="apple-touch-icon" href="/favicon-57.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/favicon-114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/favicon-72.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/favicon-144.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/favicon-60.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/favicon-120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
-	<meta name="msapplication-TileColor" content="#FFFFFF">
-	<meta name="msapplication-TileImage" content="/favicon-144.png">
-	<meta name="msapplication-config" content="/browserconfig.xml">
+    <link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="apple-touch-icon" href="/favicon-57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon-114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon-72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon-144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon-60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileImage" content="/favicon-144.png">
+    <meta name="msapplication-config" content="/browserconfig.xml">
 
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -58,7 +58,7 @@
         </nav>
         <div class="hero">
             <div id="particles-js" class="homepage-hero">
-                <h1 class="text-center white-text intro">creating beautiful brands</h1>
+                <h1 class="text-center white-text intro">creating beautiful <span class="element pink-text"></span></h1>
             </div>
         </div>
     </section>
@@ -66,67 +66,77 @@
     <section>
         <div class="central-text-intro container">
             <div class="twelve columns">
-                <h3>ackee is the portfolio of Ed Stennett</h3>
-                <p>ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
+                <h3 class="fade-in">ackee is the portfolio of Ed Stennett</h3>
+                <p class="fade-in">ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
                 <hr class="divider">
             </div>
         </div>
     </section>
 
     <section>
-        <div class="six-no-padding columns image-blur">
-            <a href="uwork.html">
-                <span class="caption"> <h3>uWork</h3>
+        <div class="portfolio-grid">
+            <div class="six-no-padding columns image-blur">
+                <figure>
+                    <a href="uwork.html">
+                        <span class="caption"> <h3>uWork</h3>
                     <hr class="hr-full-width">
                     <p>Design   |   Branding   |   UX   |   UI</p></span>
-                <img src="img/uwork-hero.png" class="img-responsive" alt="uwork logo on green background">
-            </a>
-        </div>
-        <div class="six-no-padding columns image-blur">
-            <a href="ackee.html">
-                <span class="caption"> <h3>ackee</h3>
+                        <img src="img/uwork-hero.png" class="img-responsive" alt="uwork logo on green background">
+                    </a>
+                </figure>
+            </div>
+            <div class="six-no-padding columns image-blur">
+                <figure>
+                    <a href="ackee.html">
+                        <span class="caption"> <h3>ackee</h3>
                     <hr class="hr-full-width">
                     <p>Web Design   |   Branding</p></span>
-                <img src="img/ackee-hero.jpg" class="img-responsive" alt="ackee logo on dark background">
-            </a>
-        </div>
-        <div class="six-no-padding columns image-blur">
-            <a href="jamesfalconer.html">
-                <span class="caption"> <h3>James Falconer</h3>
+                        <img src="img/ackee-hero.jpg" class="img-responsive" alt="ackee logo on dark background">
+                    </a>
+                </figure>
+            </div>
+            <div class="six-no-padding columns image-blur">
+                <figure>
+                    <a href="jamesfalconer.html">
+                        <span class="caption"> <h3>James Falconer</h3>
                     <hr class="hr-full-width">
                     <p>Web Design</p></span>
-                <img src="img/jf-hero.jpg" class="img-responsive" alt="dark image from James Falconer's site with a lightbulb">
-            </a>
-        </div>
-        <div class="six-no-padding columns image-blur">
-            <a href="cgm.html">
-                <span class="caption"> <h3>CGM</h3>
+                        <img src="img/jf-hero.jpg" class="img-responsive" alt="dark image from James Falconer's site with a lightbulb">
+                    </a>
+                </figure>
+            </div>
+            <div class="six-no-padding columns image-blur">
+                <figure>
+                    <a href="cgm.html">
+                        <span class="caption"> <h3>CGM</h3>
                     <hr class="hr-full-width">
                     <p> Web Design   |   Branding</p></span>
-                <img src="img/cgm-ipad.jpg" class="img-responsive" alt="young couple smiling from cgm site">
-            </a>
-        </div>
-        <svg width="100%" height="10px" xmlns="http://www.w3.org/2000/svg">
+                        <img src="img/cgm-ipad.jpg" class="img-responsive" alt="young couple smiling from cgm site">
+                    </a>
+                </figure>
+            </div>
+            <svg width="100%" height="10px" xmlns="http://www.w3.org/2000/svg">
             <filter id="blur1">
                 <feGaussianBlur stdDeviation="3"/>
             </filter>
         </svg>
+        </div>
     </section>
-    
+
     <section>
         <div class="container text-block">
             <div class="six columns left-text-intro">
-                <h3>services</h3>
-                <p>Ed Stennett is currently the Technical Director at ACHiiVE, an innovative agency in Winchester, Hampshire. He is responsible for the technical and creative output of the company, providing creative direction, presenting creative concepts and rationalé to key clients on a glabal scale.</p>
+                <h3 class="fade-in">services</h3>
+                <p class="fade-in">Ed Stennett is currently the Technical Director at ACHiiVE, an innovative agency in Winchester, Hampshire. He is responsible for the technical and creative output of the company, providing creative direction, presenting creative concepts and rationalé to key clients on a glabal scale.</p>
             </div>
             <div class="six columns right-text-intro">
                 <h3 class="invisible">skills</h3>
-                <p>Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
+                <p class="fade-in">Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
             </div>
         </div>
     </section>
 
-     <section class="contact-form">
+    <section class="contact-form">
         <div class="twelve columns contact-hero ">
         </div>
         <div class="container">
@@ -190,7 +200,14 @@
     <script src="./js/plugins.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/modernizr-2.8.3.min.js"></script>
-
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            Typed.new('.element', {
+                strings: ["brands", "designs", "user experiences"],
+                typeSpeed: 250
+            });
+        });
+    </script>
     <script>
         (function(b, o, i, l, e, r) {
             b.GoogleAnalyticsObject = l;
@@ -210,6 +227,33 @@
     <script>
         $('.menu-handle').on('click', function() {
             $('nav ul').toggleClass('menu-visible');
+        });
+    </script>
+    <script>
+        jQuery(document).ready(function() {
+
+            /* Every time the window is scrolled ... */
+            jQuery(window).scroll(function() {
+
+                /* Check the location of each desired element */
+                jQuery('.fade-in').each(function(i) {
+
+                    var bottom_of_object = jQuery(this).offset().top + jQuery(this).outerHeight();
+                    var bottom_of_window = jQuery(window).scrollTop() + jQuery(window).height();
+
+                    /* If the object is completely visible in the window, fade it it */
+                    if (bottom_of_window > bottom_of_object) {
+
+                        jQuery(this).animate({
+                            'opacity': '1'
+                        }, 500);
+
+                    }
+
+                });
+
+            });
+
         });
     </script>
 </body>
