Parallax bug fixes

--- a/src/about.html
+++ b/src/about.html
@@ -11,26 +11,26 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link href="http://allfont.net/allfont.css?fonts=league-spartan" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Biryani" rel="stylesheet">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
-    <link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
-    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-    <link rel="apple-touch-icon" href="/favicon-57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/favicon-114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/favicon-72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/favicon-144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/favicon-60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
-    <meta name="msapplication-TileColor" content="#FFFFFF">
-    <meta name="msapplication-TileImage" content="/favicon-144.png">
-    <meta name="msapplication-config" content="/browserconfig.xml">
+        <link rel="shortcut icon" href="/favicon.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
+	<link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
+	<link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
+	<link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+	<link rel="apple-touch-icon" href="/favicon-57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/favicon-114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/favicon-72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/favicon-144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/favicon-60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/favicon-120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
+	<meta name="msapplication-TileImage" content="/favicon-144.png">
+	<meta name="msapplication-config" content="/browserconfig.xml">
 
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -66,8 +66,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3 class="fade-in">about</h3>
-                <p class="fade-in">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <h3>about</h3>
+                <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
@@ -77,8 +77,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
-                <h3 class="fade-in">skills</h3>
-                <p class="fade-in">Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
+                <h3>skills</h3>
+                <p>Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
             </div>
         </div>
     </section>
@@ -87,12 +87,12 @@
     <section class="grey-text-block">
         <div class="container text-block">
             <div class="six columns left-text-intro">
-                <h3 class="fade-in">work</h3>
-                <p class="fade-in">Working as Technical Director, Ed is immersed in a creative world with notable work ranging from branding for global events to user interface and user experience design for global apps.</p>
+                <h3>work</h3>
+                <p>Working as Technical Director, Ed is immersed in a creative world with notable work ranging from branding for global events to user interface and user experience design for global apps.</p>
             </div>
             <div class="six columns right-text-intro">
                 <h3 class="invisible">clients</h3>
-                <p class="fade-in">Clients worked for include: Abbvie, uWork, Merck, Sanofi Genzyme, Novartis, Sanofi, Shire, Allergan, Celgene, Daiitchi Sankyo, Ipsen, MedPharm, Jazz, Pierre Fabre, Terumo, Vertex</p>
+                <p>Clients worked for include: Abbvie, uWork, Merck, Sanofi Genzyme, Novartis, Sanofi, Shire, Allergan, Celgene, Daiitchi Sankyo, Ipsen, MedPharm, Jazz, Pierre Fabre, Terumo, Vertex</p>
             </div>
         </div>
     </section>
@@ -100,11 +100,13 @@
     <section>
         <div class="wrapper">
             <div class="container">
+                <!--                <video class="showreel-video" id="video" poster="img/showreel-poster.jpg">-->
                 <video class="showreel" id="video1" poster="img/showreel-poster.jpg">
                 <source src="img/ackee-showreel.mp4" type="video/mp4"/>
                 <source src="img/ackee-showreel.webm" type="video/webm"/>
                 <source src="img/ackee-showreel.ogg" type="video/ogg"/>
             </video>
+                <!--                <button class="media-overlay" type="button"></button>-->
                 <a class="video-control js-video-control paused" href="#" data-video="video1"></a>
             </div>
         </div>
@@ -154,6 +156,8 @@
         </div>
 
     </section>
+    
+    <div class="hidden" id="particles-js"></div>
 
     <footer class="global-footer">
         <div class="container">
@@ -176,6 +180,7 @@
     <script src="./js/plugins.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/modernizr-2.8.3.min.js"></script>
+
     <script>
         (function(b, o, i, l, e, r) {
             b.GoogleAnalyticsObject = l;
@@ -217,34 +222,6 @@
         $(document).on('click', '.js-video-control', function(e) {
             playVideo($(this));
             e.preventDefault();
-        });
-    </script>
-    
-        <script>
-        jQuery(document).ready(function() {
-
-            /* Every time the window is scrolled ... */
-            jQuery(window).scroll(function() {
-
-                /* Check the location of each desired element */
-                jQuery('.fade-in').each(function(i) {
-
-                    var bottom_of_object = jQuery(this).offset().top + jQuery(this).outerHeight();
-                    var bottom_of_window = jQuery(window).scrollTop() + jQuery(window).height();
-
-                    /* If the object is completely visible in the window, fade it it */
-                    if (bottom_of_window > bottom_of_object) {
-
-                        jQuery(this).animate({
-                            'opacity': '1'
-                        }, 500);
-
-                    }
-
-                });
-
-            });
-
         });
     </script>
 </body>
