--- a/src/uwork.html
+++ b/src/uwork.html
@@ -194,6 +194,8 @@
 
     </section>
 
+    <div class="hidden" id="particles-js"></div>
+
     <footer class="global-footer">
         <div class="container">
             <div class="one column footer-padding">
