--- a/src/work.html
+++ b/src/work.html
@@ -175,6 +175,7 @@
 
     </section>
 
+    <div class="hidden" id="particles-js"></div>
     
     <footer class="global-footer">
         <div class="container">
@@ -219,7 +220,6 @@
             $('nav ul').toggleClass('menu-visible');
         });
     </script>
-    
 </body>
 
 </html>
