--- a/src/ackee.html
+++ b/src/ackee.html
@@ -70,8 +70,8 @@
                 <a href="index.html"><u>ackeecreative.com</u></a>
             </div>
             <div class="five columns right-text-intro">
-                <h3 class="fade-in">skills</h3>
-                <p class="fade-in">XD, Photoshop, Premiere Pro, After Effects, Illustrator, InDesign, HTML, CSS, Javascript</p>
+                <h3 class="">skills</h3>
+                <p>XD, Photoshop, Premiere Pro, After Effects, Illustrator, InDesign, HTML, CSS, Javascript</p>
             </div>
         </div>
     </section>
@@ -79,8 +79,8 @@
     <section>
         <div class="central-text-intro container">
             <div class="twelve columns">
-                <h3 class="fade-in">intro</h3>
-                <p class="fade-in">ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
+                <h3>intro</h3>
+                <p>ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
                 <hr class="divider">
             </div>
         </div>
@@ -93,8 +93,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3 class="fade-in">identity</h3>
-                <p class="fade-in">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <h3>identity</h3>
+                <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
@@ -106,8 +106,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
-                <h3 class="fade-in">site</h3>
-                <p class="fade-in">Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
+                <h3>site</h3>
+                <p>Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
             </div>
         </div>
     </section>
@@ -120,8 +120,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3 class="fade-in">about</h3>
-                <p class="fade-in">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <h3>about</h3>
+                <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
@@ -137,7 +137,7 @@
         <section class="portfolio-intro">
         <div class="container portfolio-block-height-small">
             <div class="five columns offset-by-one left-text-intro">
-                <a href="work.html" class="fade-in"><u>&larr; back to portfolio</u></a>
+                <a href="work.html"><u>&larr; back to portfolio</u></a>
             </div>
         </div>
     </section>
@@ -186,7 +186,7 @@
 
     </section>
 
-
+    <div class="hidden" id="particles-js"></div>
 
     <footer class="global-footer">
         <div class="container">
@@ -209,7 +209,7 @@
     <script src="./js/plugins.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/modernizr-2.8.3.min.js"></script>
-    
+
     <script>
         (function(b, o, i, l, e, r) {
             b.GoogleAnalyticsObject = l;
@@ -231,32 +231,32 @@
             $('nav ul').toggleClass('menu-visible');
         });
     </script>
-    <script>
-    jQuery(document).ready(function () {
+        <script>
+        $(document).ready(function() {
 
-    /* Every time the window is scrolled ... */
-    jQuery(window).scroll(function () {
+            /* Every time the window is scrolled ... */
+            $(window).scroll(function() {
 
-        /* Check the location of each desired element */
-        jQuery('.fade-in').each(function (i) {
+                /* Check the location of each desired element */
+                $('.fade-in').each(function(i) {
 
-            var bottom_of_object = jQuery(this).offset().top + jQuery(this).outerHeight();
-            var bottom_of_window = jQuery(window).scrollTop() + jQuery(window).height();
+                    var bottom_of_object = $(this).offset().top + $(this).outerHeight();
+                    var bottom_of_window = $(window).scrollTop() + $(window).height();
 
-            /* If the object is completely visible in the window, fade it it */
-            if (bottom_of_window > bottom_of_object) {
+                    /* If the object is completely visible in the window, fade it it */
+                    if (bottom_of_window > bottom_of_object) {
 
-                jQuery(this).animate({
-                    'opacity': '1'
-                }, 500);
+                        $(this).animate({
+                            'opacity': '1'
+                        }, 500);
 
-            }
+                    }
+
+                });
+
+            });
 
         });
-
-    });
-
-});
     </script>
 </body>
 
