--- a/src/cgm.html
+++ b/src/cgm.html
@@ -186,6 +186,8 @@
 
     </section>
 
+    <div class="hidden" id="particles-js"></div>
+
     <footer class="global-footer">
         <div class="container">
             <div class="one column footer-padding">
