Fade in effect added to copy throughout site

--- a/src/index.html
+++ b/src/index.html
@@ -66,8 +66,8 @@
     <section>
         <div class="central-text-intro container">
             <div class="twelve columns">
-                <h3>ackee is the portfolio of Ed Stennett</h3>
-                <p>ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
+                <h3 class="fade-out">ackee is the portfolio of Ed Stennett</h3>
+                <p class="fade-out">ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
                 <hr class="divider">
             </div>
         </div>
@@ -126,8 +126,8 @@
     <section>
         <div class="container text-block">
             <div class="six columns left-text-intro">
-                <h3>services</h3>
-                <p>Ed Stennett is currently the Technical Director at ACHiiVE, an innovative agency in Winchester, Hampshire. He is responsible for the technical and creative output of the company, providing creative direction, presenting creative concepts and rationalé to key clients on a glabal scale.</p>
+                <h3 class="fade-out">services</h3>
+                <p class="fade-out">Ed Stennett is currently the Technical Director at ACHiiVE, an innovative agency in Winchester, Hampshire. He is responsible for the technical and creative output of the company, providing creative direction, presenting creative concepts and rationalé to key clients on a glabal scale.</p>
             </div>
             <div class="six columns right-text-intro">
                 <h3 class="invisible">skills</h3>
