--- a/src/about.html
+++ b/src/about.html
@@ -66,8 +66,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3>about</h3>
-                <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <h3 class="fade-out">about</h3>
+                <p class="fade-out">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
@@ -77,8 +77,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
-                <h3>skills</h3>
-                <p>Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
+                <h3 class="fade-out">skills</h3>
+                <p class="fade-out">Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
             </div>
         </div>
     </section>
@@ -87,12 +87,12 @@
     <section class="grey-text-block">
         <div class="container text-block">
             <div class="six columns left-text-intro">
-                <h3>work</h3>
-                <p>Working as Technical Director, Ed is immersed in a creative world with notable work ranging from branding for global events to user interface and user experience design for global apps.</p>
+                <h3 class="fade-out">work</h3>
+                <p class="fade-out">Working as Technical Director, Ed is immersed in a creative world with notable work ranging from branding for global events to user interface and user experience design for global apps.</p>
             </div>
             <div class="six columns right-text-intro">
                 <h3 class="invisible">clients</h3>
-                <p>Clients worked for include: Abbvie, uWork, Merck, Sanofi Genzyme, Novartis, Sanofi, Shire, Allergan, Celgene, Daiitchi Sankyo, Ipsen, MedPharm, Jazz, Pierre Fabre, Terumo, Vertex</p>
+                <p class="fade-out">Clients worked for include: Abbvie, uWork, Merck, Sanofi Genzyme, Novartis, Sanofi, Shire, Allergan, Celgene, Daiitchi Sankyo, Ipsen, MedPharm, Jazz, Pierre Fabre, Terumo, Vertex</p>
             </div>
         </div>
     </section>
@@ -100,13 +100,11 @@
     <section>
         <div class="wrapper">
             <div class="container">
-                <!--                <video class="showreel-video" id="video" poster="img/showreel-poster.jpg">-->
                 <video class="showreel" id="video1" poster="img/showreel-poster.jpg">
                 <source src="img/ackee-showreel.mp4" type="video/mp4"/>
                 <source src="img/ackee-showreel.webm" type="video/webm"/>
                 <source src="img/ackee-showreel.ogg" type="video/ogg"/>
             </video>
-                <!--                <button class="media-overlay" type="button"></button>-->
                 <a class="video-control js-video-control paused" href="#" data-video="video1"></a>
             </div>
         </div>
