--- a/src/cgm.html
+++ b/src/cgm.html
@@ -67,10 +67,10 @@
         <div class="container portfolio-block-height">
             <div class="five columns offset-by-one left-text-intro">
                 <h3>project link</h3>
-                <a href="uwork.co.uk"><u>cgm.co.uk</u></a>
+                <a href="c-g-m.co.uk" class="fade-out"><u>cgm.co.uk</u></a>
             </div>
             <div class="five columns right-text-intro">
-                <h3 class="">skills</h3>
+                <h3 class="fade-out">skills</h3>
                 <p>XD, Photoshop, Illustrator, InDesign, HTML, CSS, Javascript</p>
             </div>
         </div>
@@ -79,8 +79,8 @@
     <section>
         <div class="central-text-intro container">
             <div class="twelve columns">
-                <h3>intro</h3>
-                <p>ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
+                <h3 class="fade-out">intro</h3>
+                <p class="fade-out">ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
                 <hr class="divider">
             </div>
         </div>
@@ -93,8 +93,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3>brand</h3>
-                <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <h3 class="fade-out">brand</h3>
+                <p class="fade-out">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
@@ -106,8 +106,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
-                <h3>site design</h3>
-                <p>Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
+                <h3 class="fade-out">site design</h3>
+                <p class="fade-out">Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
             </div>
         </div>
     </section>
@@ -120,8 +120,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3>build</h3>
-                <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <h3 class="fade-out">build</h3>
+                <p class="fade-out">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
