--- a/src/uwork.html
+++ b/src/uwork.html
@@ -66,12 +66,12 @@
         <section class="portfolio-intro">
         <div class="container portfolio-block-height">
             <div class="five columns offset-by-one left-text-intro">
-                <h3>project link</h3>
-                <a href="uwork.co.uk"><u>uwork.co.uk</u></a>
+                <h3 class="fade-out">project link</h3>
+                <a href="uwork.co.uk" class="fade-out"><u>uwork.co.uk</u></a>
             </div>
             <div class="five columns right-text-intro">
-                <h3 class="">skills</h3>
-                <p>XD, Photoshop, Illustrator, InDesign, HTML, CSS, Javascript</p>
+                <h3 class="fade-out">skills</h3>
+                <p class="fade-out">XD, Photoshop, Illustrator, InDesign, HTML, CSS, Javascript</p>
             </div>
         </div>
     </section>
@@ -79,8 +79,8 @@
     <section>
         <div class="central-text-intro container">
             <div class="twelve columns">
-                <h3>intro</h3>
-                <p>ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
+                <h3 class="fade-out">intro</h3>
+                <p class="fade-out">ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
                 <hr class="divider">
             </div>
         </div>
@@ -93,8 +93,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3>design</h3>
-                <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <h3 class="fade-out">design</h3>
+                <p class="fade-out">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
@@ -106,8 +106,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
-                <h3>identity</h3>
-                <p>Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
+                <h3 class="fade-out">identity</h3>
+                <p class="fade-out">Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
             </div>
         </div>
     </section>
@@ -120,8 +120,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3>ui</h3>
-                <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <h3 class="fade-out">ui</h3>
+                <p class="fade-out">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
