--- a/src/work.html
+++ b/src/work.html
@@ -88,7 +88,7 @@
     </section>
 
     <section>
-        <div class="container">
+        <div class="container fade-out">
             <div class="six-no-padding columns image-blur">
             <figure><a href="uwork.html">
                 <span class="caption"> <h3>uWork</h3>
