Work links updated and set to target=blank

--- a/src/jamesfalconer.html
+++ b/src/jamesfalconer.html
@@ -67,7 +67,7 @@
         <div class="container portfolio-block-height">
             <div class="five columns offset-by-one left-text-intro">
                 <h3 class="fade-out">project link</h3>
-                <a href="jamesfalconer.me" class="fade-out"><u>jamesfalconer.me</u></a>
+                <a href="http://jamesfalconer.me/" target="_blank" class="fade-out"><u>jamesfalconer.me</u></a>
             </div>
             <div class="five columns right-text-intro">
                 <h3 class="fade-out">skills</h3>
