--- a/src/ackee.html
+++ b/src/ackee.html
@@ -67,7 +67,7 @@
         <div class="container portfolio-block-height">
             <div class="five columns offset-by-one left-text-intro">
                 <h3 class="fade-out">project link</h3>
-                <a href="index.html" class="fade-out"><u>ackeecreative.com</u></a>
+                <a href="index.html"  target="_blank" class="fade-out"><u>ackeecreative.com</u></a>
             </div>
             <div class="five columns right-text-intro">
                 <h3 class="fade-out">skills</h3>
