--- a/src/cgm.html
+++ b/src/cgm.html
@@ -67,7 +67,7 @@
         <div class="container portfolio-block-height">
             <div class="five columns offset-by-one left-text-intro">
                 <h3>project link</h3>
-                <a href="c-g-m.co.uk" class="fade-out"><u>cgm.co.uk</u></a>
+                <a href="http://www.c-g-m.co.uk/" target="_blank" class="fade-out"><u>cgm.co.uk</u></a>
             </div>
             <div class="five columns right-text-intro">
                 <h3 class="fade-out">skills</h3>
