--- a/src/uwork.html
+++ b/src/uwork.html
@@ -67,7 +67,7 @@
         <div class="container portfolio-block-height">
             <div class="five columns offset-by-one left-text-intro">
                 <h3 class="fade-out">project link</h3>
-                <a href="uwork.co.uk" class="fade-out"><u>uwork.co.uk</u></a>
+                <a href="http://uwork.co.uk/" target="_blank" class="fade-out"><u>uwork.co.uk</u></a>
             </div>
             <div class="five columns right-text-intro">
                 <h3 class="fade-out">skills</h3>
