--- a/src/jamesfalconer.html
+++ b/src/jamesfalconer.html
@@ -80,7 +80,7 @@
         <div class="central-text-intro container">
             <div class="twelve columns">
                 <h3 class="fade-out">intro</h3>
-                <p class="fade-out">ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
+                <p class="fade-out">The site was built as an online CV for a university undergraduate to help support job applications post graduation.</p>
                 <hr class="divider">
             </div>
         </div>
@@ -94,7 +94,7 @@
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
                 <h3 class="fade-out">design</h3>
-                <p class="fade-out">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <p class="fade-out">The site was designed from scratch in photoshop and wireframes were created using Adobe Experience Design.</p>
             </div>
         </div>
     </section>
@@ -106,8 +106,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
-                <h3 class="fade-out">build</h3>
-                <p class="fade-out">Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
+                <h3 class="fade-out">code</h3>
+                <p class="fade-out">The site has been built using predominantly HTML and CSS with basic Javascript and PHP.</p>
             </div>
         </div>
     </section>
@@ -120,8 +120,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3 class="fade-out">about</h3>
-                <p class="fade-out">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <h3 class="fade-out">build</h3>
+                <p class="fade-out">Using bootstrap as the CSS framework, the site was designed to be simple, responsive and easy to navigate.</p>
             </div>
         </div>
     </section>
