--- a/src/about.html
+++ b/src/about.html
@@ -67,7 +67,7 @@
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
                 <h3 class="fade-out">about</h3>
-                <p class="fade-out">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <p class="fade-out">I am a passionate designer, specialising in UX design and branding.</p>
             </div>
         </div>
     </section>
@@ -78,7 +78,7 @@
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
                 <h3 class="fade-out">skills</h3>
-                <p class="fade-out">Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
+                <p class="fade-out">Day to day I immersed in a design world, with anything from print design through the user expiernece design. In my spare time, I like coding my own designs.</p>
             </div>
         </div>
     </section>
@@ -88,11 +88,11 @@
         <div class="container text-block">
             <div class="six columns left-text-intro">
                 <h3 class="fade-out">work</h3>
-                <p class="fade-out">Working as Technical Director, Ed is immersed in a creative world with notable work ranging from branding for global events to user interface and user experience design for global apps.</p>
+                <p class="fade-out">Working as Technical Director, I am immersed in a creative world with notable work ranging from branding for global product launch events to user interface and user experience design for global apps. I have been lucky enough to work with some of largest companies in world.</p>
             </div>
             <div class="six columns right-text-intro">
                 <h3 class="invisible">clients</h3>
-                <p class="fade-out">Clients worked for include: Abbvie, uWork, Merck, Sanofi Genzyme, Novartis, Sanofi, Shire, Allergan, Celgene, Daiitchi Sankyo, Ipsen, MedPharm, Jazz, Pierre Fabre, Terumo, Vertex</p>
+                <p class="fade-out">Clients I have worked for include: Abbvie, Merck, Sanofi Genzyme, Novartis, Takeda, Sanofi, Shire, Allergan, BMS, Celgene, Daiitchi Sankyo, uWork, Ipsen, MedPharm, CGM, Jazz, Pierre Fabre, Terumo, Vertex</p>
             </div>
         </div>
     </section>
