--- a/src/cgm.html
+++ b/src/cgm.html
@@ -80,7 +80,7 @@
         <div class="central-text-intro container">
             <div class="twelve columns">
                 <h3 class="fade-out">intro</h3>
-                <p class="fade-out">ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
+                <p class="fade-out">I was approached by CGM, a medium sized solicitors firm in Southampton, to updated their brand and launch a new site over the course of a year.</p>
                 <hr class="divider">
             </div>
         </div>
@@ -94,7 +94,7 @@
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
                 <h3 class="fade-out">brand</h3>
-                <p class="fade-out">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <p class="fade-out">They wanted the logo to stay more or less the same, but wanted to create a set of brand guidelines that would allow them to create a consistent and coherent identity.</p>
             </div>
         </div>
     </section>
@@ -107,7 +107,7 @@
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
                 <h3 class="fade-out">site design</h3>
-                <p class="fade-out">Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
+                <p class="fade-out">Using a combination of photoshop and experience design, the site is the progress at the final build phase.</p>
             </div>
         </div>
     </section>
@@ -121,7 +121,7 @@
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
                 <h3 class="fade-out">build</h3>
-                <p class="fade-out">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <p class="fade-out">The site will be handcoded from scratch, using predominatley HTML, CSS and Javascript and will use Jekyll to generate the static site. Once built, a static site CMS that works with Jekyll will be added to the site.</p>
             </div>
         </div>
     </section>
