--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,7 @@
         </nav>
         <div class="hero">
             <div id="particles-js" class="homepage-hero">
+                <h1 class="visuallyhidden"></h1>
                 <h1 class="text-center white-text intro">creating beautiful <span class="element pink-text"></span></h1>
             </div>
         </div>
@@ -66,8 +67,8 @@
     <section>
         <div class="central-text-intro container">
             <div class="twelve columns">
-                <h3 class="fade-out">ackee is the portfolio of Ed Stennett</h3>
-                <p class="fade-out">ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
+                <h3 class="fade-out">ackee is my portfolio</h3>
+                <p class="fade-out">ackee is a site designed to showcase work by me, Ed Stennett, a Winchester based Designer. With around three and a half years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases my recent projects completed in my spare time.</p>
                 <hr class="divider">
             </div>
         </div>
@@ -127,7 +128,7 @@
         <div class="container text-block">
             <div class="six columns left-text-intro">
                 <h3 class="fade-out">services</h3>
-                <p class="fade-out">Ed Stennett is currently the Technical Director at ACHiiVE, an innovative agency in Winchester, Hampshire. He is responsible for the technical and creative output of the company, providing creative direction, presenting creative concepts and rationalé to key clients on a glabal scale.</p>
+                <p class="fade-out">I am currently the Technical Director at ACHiiVE, an innovative agency in Winchester, Hampshire. I am responsible for the technical and creative output of the company, providing creative direction and presenting creative concepts and rationalé to key clients on a glabal scale.</p>
             </div>
             <div class="six columns right-text-intro">
                 <h3 class="invisible">skills</h3>
