--- a/src/uwork.html
+++ b/src/uwork.html
@@ -80,7 +80,7 @@
         <div class="central-text-intro container">
             <div class="twelve columns">
                 <h3 class="fade-out">intro</h3>
-                <p class="fade-out">ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
+                <p class="fade-out">uWork is the biggest personal project I have taken on. As a start up with big aspirations, it gave me invaluable start up experience. Working as the chief design officer in my spare evenings and weekends, I responsible for creating and maintaining the brand, UI and UX design and print design.</p>
                 <hr class="divider">
             </div>
         </div>
@@ -93,8 +93,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3 class="fade-out">design</h3>
-                <p class="fade-out">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <h3 class="fade-out">brand</h3>
+                <p class="fade-out">The first step was to create a strong brand for uWork. I designed a logo and create a set of comprehensive brand guidelines that acted as a starting point for the site itself.</p>
             </div>
         </div>
     </section>
@@ -106,8 +106,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
-                <h3 class="fade-out">identity</h3>
-                <p class="fade-out">Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
+                <h3 class="fade-out">UI / UX design</h3>
+                <p class="fade-out">As a task site aimed at students, the UI and UX for the site and app is critical to uWork's success. Using adobe's new XD applicaiton, a fully designed wireframe is in the process of being created.</p>
             </div>
         </div>
     </section>
@@ -120,8 +120,8 @@
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3 class="fade-out">ui</h3>
-                <p class="fade-out">Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
+                <h3 class="fade-out">build</h3>
+                <p class="fade-out">A big focus on the uWork project is creating beautiful code, with emphasis on the A11Y Project, a community-driven effort to make web accessibility easier.</p>
             </div>
         </div>
     </section>
